Don't display a label if there's no label, fix spacing at the bottom of the page

--- a/less/chat.less
+++ b/less/chat.less
@@ -19,7 +19,7 @@
 .chat-container {
   padding-top: 320px;
   height: 100%;
-  padding-bottom: 20px;
+  padding-bottom: 35px;
 }
 
 .lobby-chat {
